--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns:  auto auto auto auto auto auto;
   grid-gap: 10px;
   background-color: #2196F3;
   padding: 100px;
